--- a/app/templates/see_event.html
+++ b/app/templates/see_event.html
@@ -59,7 +59,22 @@
                                 <span class="likes-display">0</span>
                             {% endif %}
                             {% if event._id|string in user.events_liked %}
-                                <span class="material-icons centered blue-txt">thumb_up_alt</span>
+                                <form method="POST"
+                                    action="{{ url_for('events.unlike_event', username=session['user']) }}">
+                                    <!-- Hidden input to get the event id -->
+                                    <div class="hide">
+                                        <input id="unlike_event" name="unlike_event" value="{{ event._id }}" type="text">
+                                    </div>
+                                    <!-- Remove a like -->
+                                    <div class="center-align">
+                                        <button class="transp-bg unlike-btn" type="submit"
+                                            aria-label="Remove a like to the event.">
+                                            <span class="valign-wrapper">
+                                                <span class="material-icons centered red-txt">thumb_down_alt</span>
+                                            </span>
+                                        </button>
+                                    </div>
+                                </form>
                             {% else %}
                                 <form method="POST" action="{{ url_for('events.like_event', username=session['user']) }}">
                                     <!-- Hidden input to get the event id -->
