Remove the support section before lauching website as it will be part of future functionalities

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -40,20 +40,6 @@
                 {% endif %}
             </div>
         </div>
-        <!-- Support -->
-        <div class="col s12 l4">
-            <div class="card-panel green-bg home-cards valign-wrapper hoverable">
-                <a href="#" class="black-txt centered">
-                    <h2 class="card-headings center-align text-shadow">Support</h2>
-                    <p class="home-card-txt center-align">
-                        Get ideas<br>
-                        Share parenting tips<br>
-                        Useful contacts<br>
-                        Access the Forum
-                    </p>
-                </a>
-            </div>
-        </div>
     </div>
 
     <!-- about us -->
@@ -71,7 +57,7 @@
             It promotes Togetherness, mobility, physical and mental health.<br>
             Here you can Join activities created by your community and have a good time!<br>
             You can as well create an activity and encourage people to got out 	&#x1F601; <br>
-            There is as well a support page where you will find useful contacts, 
+            There is as well a support page in the making where you will find useful contacts, 
             parenting advices and the access to a forum where you can ask questions and discuss &#x1F609;
         </p>
     </div>
