Add a chip for profile page icon and rearrange the navbar

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -496,6 +496,8 @@ footer {
 /* profile chip */
 .profile-chip {
     margin: auto;
+    background-color: transparent;
+    height: 24px;
 }
 
 /* home.html */
