Fix the checking of user logged in for conditional display

--- a/app/templates/create_event.html
+++ b/app/templates/create_event.html
@@ -32,11 +32,10 @@
             <!-- Location -->
             <div class="row">
                 <div class="input-field col s12">
-                    <!-- add REQUIRED !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <input id="event_location" name="event_location" type="text" class="validate">
+                    <input id="event_location" name="event_location" type="text" class="validate" required>
                     <label for="event_location">Location</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">travel_explore</span>Select the location via google maps
+                        <span class="material-icons">travel_explore</span>Be specific so it's easy to find
                     </span>
                 </div>
             </div>
