--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -511,8 +511,8 @@ footer {
 }
 
 .home-cards {
-    margin: 20px auto;
-    width: 360px;
+    /* margin: 20px; */
+    width: 100%;
     height: 200px;
     border-radius: 10px;
 }
